# notification_service

./: Dockerfile  config.py  deps.py  main.py  pyproject.toml  schemas.py  send_email.py
.github/workflows/: build-push-deploy.yml
alembic/: env.py
alembic/versions/: 089551a8f7e3_init.py  63eb6851c6bd_add_new_enums.py  69d889ac0a1b_init.py  7a1b7d857510_init.py  ac2e438a23ab_latest_update.py  b0544d7811de_fix_notification.py  b7a422a4230a_add_new_destination.py  e84d38a5af8e_init.py
core/: logger.py
database/crud/: base.py  notification.py
database/db/: session.py
database/models/: __init__.py  notification.py
database/schemas/: notification.py
logs/: logs-notification-service-2025.08.11.jsonl
notification_services/notification/: registry.py  service.py
notification_services/notification/configs/: template_config.py
notification_services/notification/factories/: context_factory.py
notification_services/notification/schemas/: base_notification_context.py  email.py  sms.py  telegram.py
notification_services/notification/senders/: send_email.py  send_sms.py  send_telegram.py
notification_services/rabbit_service/: base.py  custom_consumer.py
notification_services/rabbit_service/logs/: logs-notification-service-2025.08.08.jsonl
rabbit_service/: base.py  custom_consumer.py
src/templates/: auth_reset_password.html  base_email.html  bid_lost.html  bid_won.html  code_email.html  new_bid_placed.html  order_status_updated.html
